Create an Advanced menu item to tuck away buttons

--- a/MultiMiner.Win/MainForm.resx
+++ b/MultiMiner.Win/MainForm.resx
@@ -152,7 +152,7 @@
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADISURBVDhPY7Ct2HTaqXrLf1KwXcXGMwwwABJImrD3f3jH
         TqIwSK1r7db/UO0QA0ASxAKQ2lEDSDDg79+/E4EUPxAzw3DoqlXMoaGrmKHaIQbgika/zg28Ommrn+pk
         r/mPDWtlr7nBYFexeS8QAxMHOq7/x1Bfz4RNIzKGuoOBQat+FRsMk2UAMrAqXeNlXbY6noHhPyM2TcgY
-        rAGUtsn2gkfuNnaQhunbrv3/9fsvHNfXN/6rr/9PnBcocgEhAFT0HF0TAq95DgDK1mN8UKCzVgAAAABJ
+        rAGUtsn2gkfuNnaQhunbrv3/9fsvHNfX1/+rr/9PnBcocgEhAFT0HF0TAq95DgDJhmN6oKucfgAAAABJ
         RU5ErkJggg==
 </value>
   </data>
@@ -186,36 +186,27 @@
         z4PRgsY8pgAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="detectDevicesButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFrSURBVDhPY7Ct2HTaqXrLf1KwXcXGMwwwABJImrD3f3jH
-        TqIwSK1r7db/UO0QA0ASxAKQ2pFkQEtLy7+/f/9OAzLloMoZouu38bnUbs2Bcgm6IA2qjEEnZ91snew1
-        /8E4Z9UpqDDEAGzRGNaxYx1UCYNW9po/II1m+SvP2RYt2w0zCCxpV7F5LxADEwcaLtvkCZLXLdySBVJ8
-        9Prjq83Nzf9Azvr+/ftpkJhu7rrTYENAQKt+FRsMgwxwqtwoDhLXLdx8CqQYBGAGgIBD8fLturnrEYGJ
-        DKxK13i5Fi/iBrF1CjfvBRkA0oyMLfKXHYcbAErb6F6wLd/oBJLTyt2gBTKgbfGJVzAX3Hzw9ibYC/kb
-        FjN45G5jB2mYvu3a/1+//8IxEDCCDNDJXHUEpBiG5ePn/4axQfJggO4CBgaIZmDoHwAp1Mxec9Ewf4um
-        QeH2vbqFO07pl+zMBmskBLQyV+8CGoLIuhiAgQEANf01TnA3cXUAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="apiMonitorButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACTSURBVDhPY7Cr2PwJiP+Tgy0r1n4BGYBVklgMNGATVgli
-        MUNmZub/z58/k4VBesEGbNq0iSwMN+Dsm38YeMv2nf8JAaIMOHnyJIbNIDEQoI8LkAGyK0CAtgYQA8AG
-        VFRU7AAxyMFlZWW7GfABz5WNOSAM5ZIOgK77D8JQLnbgvbb1PzIG2QjTiI5BcujqKTSg9T8AadeoC4Fa
-        VusAAAAASUVORK5CYII=
-</value>
-  </data>
   <data name="desktopModeButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAE3SURBVDhPY7Ct2HTaqXrLf1KxXcXGMwwgAOIkTdj7P7xj
-        J9EYpN61dut/uAEgQVIASP0QNeD79+9v//z5cwyo/hVJBty+ffvPv3//8oBMFpCe+vp6Jte6zfFEGwDU
+        J9EYpN61dut/uAEgQVIASP0QNeD79+9v//z5cwyo/hVJBly5cuXPv3//8oBMFpCe+vp6Jte6zfFEGwDU
         XAdSa1Sw9p5Z0Yb/hkUb3oI1gwCRXpCwqNi2C6QZjks3X4cbgD8dzP9tX7+fxaJo6xtkA8xLN0PCwK5i
         814gBqYsfHiTpWXFrkg0A8rBBsCAVv0qNmQM02xTtPkNA8N/RpAas7K1MqaF6yeY56/TBGvCB6xK13jZ
         lqxJsC9ZJQH0Ag/IVlDgmRdvMDcr2HAHxLcq3cALVQ4BoAyC4vSCNe9CQ1cxmwNdgex8OM7bcBOqFQLQ
-        DQDlVJA4KMCwGgDEYI2EgGnJ5kCIsxf/AGvM2vATSN81LdzoAQDEc11gE5AxiwAAAABJRU5ErkJggg==
+        DQDlVJA4KMCwGgDEYI2EgGnJ5kCIsxf/AGvM2vATSN81LdzoAQCSP11LT1EBYgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="toolStripDropDownButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFZSURBVDhPY7Ct2HTaqXrLf1KwXcXGMwwwABJImrD3f3jH
+        TqIwSK1r7db/UO0QA0ASxAKQ2iFqwK9fvx7/+fPnUFjH9rtEG/D58+d/f//+3QrEy4FcDpD6+vp6Jpfa
+        rcvBmkEAnwH//v3LgCpjCA0NZYuNjf0fHx9vzMDwnxEqDDEAazS27TwJkgdpio6OPgykV4HYMTEx+4C4
+        CcQGG2BXsXkvEAMTBwbeADWgE6QYHQMNQSQmENCqX8UGw0DND43TzrDGxcUpAxXvgWo6kZaWxgXUeARq
+        wDagt5ih2lGBddlaCxAN9C/cRrAEFMDE4OKgtI3mfLALkpOThYCKwC4AhsNWqOaNUM0noqKilBg8crex
+        gzRN33bt/6/ffxH4199lIA0gp0I1oOMpIHkwwOKC/7Zlm7aD5ECKgYbMAuKTUPYRIN4HYoM1EwsSExNF
+        QZqAAccPFQICBgYASVsao3Lc2UsAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="saveButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -282,6 +273,9 @@
   </metadata>
   <metadata name="apiLogEntryBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>328, 56</value>
+  </metadata>
+  <metadata name="logLaunchArgsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>951, 56</value>
   </metadata>
   <metadata name="notifyIcon1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>523, 56</value>
@@ -1010,8 +1004,11 @@
         AAAQAwAAEAMAABADAADwAwAAEAIAABACAAAQAgAAH/4AAAEAAAABAAAAAQAAAA==
 </value>
   </data>
+  <metadata name="mobileMinerTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>799, 56</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>116</value>
+    <value>117</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
