Show Utility (W/U) in the grid

--- a/MultiMiner.Win/MainForm.resx
+++ b/MultiMiner.Win/MainForm.resx
@@ -201,12 +201,12 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFZSURBVDhPY7Ct2HTaqXrLf1KwXcXGMwwwABJImrD3f3jH
-        TqIwSK1r7db/UO0QA0ASxAKQ2iFqwK9fvx7/+fPnUFjH9rtEG3D37t1/f//+3QrEy4FcDpD6+vp6Jpfa
+        TqIwSK1r7db/UO0QA0ASxAKQ2iFqwK9fvx7/+fPnUFjH9rtEG3Dr1q1/f//+3QrEy4FcDpD6+vp6Jpfa
         rcvBmkEAnwH//v3LgCpjCA0NZYuNjf0fHx9vzMDwnxEqDDEAazS27TwJkgdpio6OPgykV4HYMTEx+4C4
         CcQGG2BXsXkvEAMTBwbeADWgE6QYHQMNQSQmENCqX8UGw0DND43TzrDGxcUpAxXvgWo6kZaWxgXUeARq
         wDagt5ih2lGBddlaCxAN9C/cRrAEFMDE4OKgtI3mfLALkpOThYCKwC4AhsNWqOaNUM0noqKilBg8crex
         gzRN33bt/6/ffxH4199lIA0gp0I1oOMpIHkwwOKC/7Zlm7aD5ECKgYbMAuKTUPYRIN4HYoM1EwsSExNF
-        QZqAAccPFQICBgYAqXQaYYtewMYAAAAASUVORK5CYII=
+        QZqAAccPFQICBgYAk6gaWHRQ2BEAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="saveButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -262,6 +262,9 @@
   <metadata name="errorsColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="utilityColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="intensityColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -296,8 +299,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAS
-        CQAAAk1TRnQBSQFMAgEBAwEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAO
+        CQAAAk1TRnQBSQFMAgEBAwEAASABAAEgAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -325,17 +328,17 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEABJAB8Qb4AfEEkBBt
-        BAAB9QEIAZ0CcQGdAQgB9BQABJAB8Qb4AfEEkAFtDv8BbQMAAbsDcQKQA3EBuxoAAvgHAAFtDv8BbQIA
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEABJAB8QbsAfEEkBBt
+        BAAB/wEIAZ0CcQGdAQgB9BQABJAB8QbsAfEEkAFtDv8BbQMAAbsDcQKQA3EBuxoAAuwHAAFtDv8BbQIA
         AZ0CcQEIBP8BCAJxAZ0ZAALxBwABbQL/Cq0C/wFtAQABuwFxAZ0I/wGdAXEBuxEAAe8ObQHvAW0O/wFt
-        Af8CcQf/AfIBBwH/AnEB9RAAAW0FGQn/Am0C/wqtAv8BbQEIAXEBCAb/AbwBFAL/AQgBcQEIEAABbQUZ
+        Af8CcQf/AfIBBwH/AnEB/xAAAW0FGQn/Am0C/wqtAv8BbQEIAXEBCAb/AbwBFAL/AQgBcQEIEAABbQUZ
         Ae8E/wPvAf8CbQ7/AW0BnQFxBv8B7wFDAfED/wFxAZ0QAAFtBRkB7wT/A+8B/wJtAv8KrQL/AW0CcQX/
         Ae8BFQEHBP8BkAFxEAABbQUZAe8I/wJtDv8BbQf/AesB7AX/AZABcRAAAW0FGQHvAf8BvATvAbwB/wJt
-        Av8KrQL/AW0B9AL/AfUD/wHsAe0F/wFxAZ0QAAFtBRkB7wj/Am0O/wFtBHEBcAL/ApIE/wEIAXEBCBAA
-        AW0O7wJtDv8BbQNxAggB8AH/Au8E/wJxAf8QAAFtDvQBbRCtA3EBkAP/AfABvAP/AZABcQEIEQAgrQFx
-        AQgBuwJxAbsE/wEIAnEBnRIAEK0Bsw6tAbMBcQEIAQABCAhxAQgTAAGzDq0BsxEAAf8CAAH/AbwBnQKR
-        AZ0BCAH/FAABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wUAAfABDwYAAeABBwIA
-        Af4BfwIAAcABAwIAAf4BfwIAAYABAUcAAQEHAAEDBgABIAEHBAAC/wGwAQ8CAAs=
+        Av8KrQL/AW0B9Ab/AewB7QX/AXEBnRAAAW0FGQHvCP8CbQ7/AW0EcQFwAv8CkgT/AQgBcQEIEAABbQ7v
+        Am0O/wFtA3ECCAHwAf8C7wT/AnEB/xAAAW0O9AFtEK0DcQGQA/8B8AG8A/8BkAFxAQgRACCtAXEBCAG7
+        AnEBuwT/AQgCcQGdEgAQrQGzDq0BswFxAQgBAAEICHEBCBMAAbMOrQGzEQAB/wIAAf8BvAGdApEBnQEI
+        Af8UAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/BQAB8AEPBgAB4AEHAgAB/gF/
+        AgABwAEDAgAB/gF/AgABgAEBRwABAQcAAQMGAAEgAQcEAAL/AbABDwIACw==
 </value>
   </data>
   <metadata name="notifyIcon1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
