--- a/MultiMiner.Win/WizardForm.resx
+++ b/MultiMiner.Win/WizardForm.resx
@@ -117,8 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="minerStepsLabel.Text" xml:space="preserve">
-    <value>Afterwards, click Next and MultiMiner will automatically download and install your chosen mining engine (if available).
+  <data name="label1.Text" xml:space="preserve">
+    <value>Welcome and thank you for choosing MultiMiner.
+
+Click Next and MultiMiner will automatically download and install bfgminer for your Operating System (if available).
+
+
 
 
 If you are comfortable with configuring things yourself, click Close below and use the program's toolbar buttons to get started.</value>
